--- a/campus.html
+++ b/campus.html
@@ -46,34 +46,26 @@
 <div class="campus-container">
     <div class="item">
         <h1 class="campus-overskrift">Campus</h1>
-        <p class="campus-innledning">Lorem ipsum dolor sit amet, 
-        consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Tortor consequat id porta nibh venenatis
-        cras.Tempus urna et pharetra pharetra massa massa ultricies. 
-        Vestibulum morbi blandit cursus risus at
-        ultrices mi tempus.Lorem ipsum dolor sit amet, 
-        consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Tortor consequat id porta nibh venenatis
-        cras.Tempus urna et pharetra pharetra massa massa ultricies.
-        </p>
+        <p> Bygget P35 befinner seg på Pilestredet 35, og er oppkalt etter Ellen Gleditsch, 
+            som var en kjemiker og en kvinnesaksforkjemper. P35 er det største bygget på universitet. 
+            P35 har mange forskjellige studentfasiliteter som for eksempel; stillerom, studiesal og
+            grupperom og kantine. Men det stopper ikke der, for Oslomet har mer enn det, som f.eks. et eget bønnerom for 
+            studenter og ansatte, en hel klatrevegg i første etasje og et Makerspace rom hvor man kan ta kurs og lage ting 
+            med laser, tekstil, 3D-printing osv.</p>
+        <!--Har satt target="_blank" i linken under for å åpne nettisden i en annen fane.-->   
     </div>
-    <!---->
-    <img src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35">
+    <!--https://www.eurosign.no/img/Prosjekter/OsloMET/_large/OsloMET-EuroSign-skilt-med-lys-skilt-uten-lys-folie-11.jpg-->    
+    <img src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"/>
 
 </div>
 <hr>
 <h2 class="første-avsnitt-tittel">Studentfasiliteter på p35</h2>
-<p class="første-avsnitt"> Troin quis libero nec urna rutrum molestie. Sed a purus ac est volutpat tincidunt. 
-        Quisque gravida vitae nunc ac volutpat. Vivamus et nisl sed nunc viverra euismod. Phasellus ultrices, quam ut 
-        porttitor semper, ipsum ipsum pellentesque est, id dictum urna felis et enim. Nunc posuere est lobortis cursus mattis. 
-        Vivamus ligula nibh, imperdiet sed tristique in, sagittis id mauris. Fusce consectetur quis nulla a dignissim. Etiam eu
-        mauris imperdiet, dictum lacus et, ornare erat. Pellentesque habitant morbi tristique senectus et netus et malesuada 
-        fames ac turpis egestas. Integer bibendum accumsan condimentum. Morbi facilisis, lorem dapibus gravida dictum, tortor 
-        nibh sollicitudin ante, vitae ultricies neque est sit amet dolor. Sed consequat tellus eu maximus viverra. Sed 
-        lobortis nibh lacus. Troin quis libero nec urna rutrum molestie. Sed a purus ac est volutpat tincidunt. 
-        Quisque gravida vitae nunc ac volutpat. Vivamus et nisl sed nunc viverra euismod. 
+<p class="første-avsnitt">Aenean a consequat lacus. Vivamus sit amet efficitur diam, eget posuere turpis. 
+    Ut consectetur dui tortor, et gravida lorem feugiat at. Mauris vestibulum hendrerit auctor.
+    Maecenas scelerisque vulputate neque, eget bibendum massa lacinia vel. Sed posuere pharetra condimentum.
+    Nulla eu nisi ut est facilisis luctus. Aenean tincidunt felis quis metus ultricies tincidunt. Quisque sit 
+    amet urna non sapien convallis suscipit vehicula sed nisi. Laoreet mi in dui ornare, non dignissim dui convallis.
+
 </p>
 <!-- En grid for å bildene om de forskjellige områdene på p35 og tilhørende tekst ved siden av hverandre. -->
 <div class="område-container">
@@ -111,6 +103,7 @@
         <!--https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI330-->
         <img src="images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="nedrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI339-->
+        <p class="bilde_tekst">Stillerom</p>
     </div>
  
     <div>
@@ -139,10 +132,11 @@
         <img src="images/studiesal_1.jpeg" alt="et annet fra studiesal på p35 i PH451" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
         <img src="images/studiesal_2.jpeg" alt="enda et bilde fra studiesal på p35 i PH451" loading="lazy" class="nedrebilde">
+        <p class="bilde_tekst">Studiesal</p>
     </div> 
 
     <div>
-        <h3 class="område-overskrift">Seminarrom</h3>
+        <h3 class="område-overskrift">Makerspace</h3>
         <ul class="campus-fasiliteter">
             <li>Proin cursus nisl at augue pharetra, eu tempus nulla dapibus.</li>
             <li>Suspendisse mollis in risus in mattis. Duis eu sem vel massa sollicitudin ultrices. 
@@ -158,12 +152,13 @@
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
         <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
-        <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI747-->
-        <img src="images/seminarrom.jpeg" alt="seminarrom på p35 i PI747" loading="lazy" class="øvrebilde">
-        <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI749-->
-        <img src="images/seminarrom_1.jpeg" alt="seminarrom på p35 i PI749" loading="lazy" class="øvrebilde">
-        <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI752-->
-        <img src="images/seminarrom_2.jpeg" alt="seminarrom på p35 i PI752" loading="lazy" class="nedrebilde">
+        <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI155--> 
+        <img src="images/makerspace_1.jpeg" alt="bilde et sløydområdet på makerspace" loading="lazy" class="øvrebilde">
+        <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI155-->
+        <img src="images/makerspace_2.jpeg" alt="bildet av lasercut på makerspace" loading="lazy" class="øvrebilde">
+        <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI155-->
+        <img src="images/makerspace_3.jpeg" alt="bilde av et område på makerspace" loading="lazy" class="nedrebilde">
+        <p>Makerspace</p>
     </div>
     
     <div class>
@@ -187,12 +182,14 @@
         <img src="images/grupperom_1.jpeg" alt="grupperom på p35 i PI238" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI234-->
         <img src="images/grupperom_2.jpeg" alt="grupperom på p35 PI234" loading="lazy" class="nedrebilde">
+        <p >Grupperom</p>
     </div>
 </div>
 <p class="siste-avsnitt"> Vivamus pretium tortor at sapien sagittis feugiat. Duis sodales, felis ut molestie porttitor, 
     mauris tortor rutrum dui, consequat aliquet leo ante nec eros. Aliquam faucibus nisi quis massa varius lobortis. 
     Sed luctus nisi eu maximus commodo. Integer accumsan ac augue eu aliquam. Donec nibh massa, porta commodo feugiat at, 
-    dapibus sit amet nibh. 
+    dapibus sit amet nibh. Nulla a rutrum elit. Quisque congue consequat mi, eu iaculis quam pellentesque at. 
+    Sed a arcu sit amet orci laoreet ultricies.
 <!--Lenke til oslomet siden om rommene på p35-->
 <p class="link-campus"> Vil du se på flere av våre fasiliteter på p35? 
     <a class="farge-link-campus" href="https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35" target="_blank">
