fjernet loading lazy

--- a/campus.html
+++ b/campus.html
@@ -94,14 +94,13 @@
     </div>
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
-    <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
-        <img src="images/stille_lesesal.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="øvrebilde">
+        <img src="images/stille_lesesal.jpeg" alt="stille leserom på p35 i PI339" class="øvrebilde">
         <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fstudent.oslomet.no%2Fauditorier-undervisningsrom%2F-%2Fundervisningsrom
             %2Fcampus%2FPIL%2Fbygning%2FP35%2From%2FP35P35-PI339&psig=AOvVaw3oVY3dnygWXssISM0Bmh22&ust=1699698337710000&source=images&cd
             =vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCCju-buYIDFQAAAAAdAAAAABAE-->
-        <img src="images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" loading="lazy" class="øvrebilde">
+        <img src="images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" class="øvrebilde">
         <!--https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI330-->
-        <img src="images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="nedrebilde">
+        <img src="images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" class="nedrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI339-->
         <p class="bilde_tekst">Stillerom</p>
     </div>
@@ -125,13 +124,12 @@
     </div>
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
-        <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="images/studiesal_3.jpeg" alt="studiesal på p35 i PH451" loading="lazy" class="øvrebilde">
+        <img src="images/studiesal_3.jpeg" alt="studiesal på p35 i PH451" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="images/studiesal_1.jpeg" alt="et annet fra studiesal på p35 i PH451" loading="lazy" class="øvrebilde">
+        <img src="images/studiesal_1.jpeg" alt="et annet fra studiesal på p35 i PH451" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="images/studiesal_2.jpeg" alt="enda et bilde fra studiesal på p35 i PH451" loading="lazy" class="nedrebilde">
+        <img src="images/studiesal_2.jpeg" alt="enda et bilde fra studiesal på p35 i PH451" class="nedrebilde">
         <p class="bilde_tekst">Studiesal</p>
     </div> 
 
@@ -151,13 +149,12 @@
     </div>
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
-        <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI155--> 
-        <img src="images/makerspace_1.jpeg" alt="bilde et sløydområdet på makerspace" loading="lazy" class="øvrebilde">
+        <img src="images/makerspace_1.jpeg" alt="bilde et sløydområdet på makerspace" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI155-->
-        <img src="images/makerspace_2.jpeg" alt="bildet av lasercut på makerspace" loading="lazy" class="øvrebilde">
+        <img src="images/makerspace_2.jpeg" alt="bildet av lasercut på makerspace" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI155-->
-        <img src="images/makerspace_3.jpeg" alt="bilde av et område på makerspace" loading="lazy" class="nedrebilde">
+        <img src="images/makerspace_3.jpeg" alt="bilde av et område på makerspace" class="nedrebilde">
         <p>Makerspace</p>
     </div>
     
@@ -175,13 +172,12 @@
     </div>
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
-        <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PE238-->
-        <img src="images/grupperom.jpeg" alt="grupperom på p35 i PE238" loading="lazy" class="øvrebilde">
+        <img src="images/grupperom.jpeg" alt="grupperom på p35 i PE238" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI238-->
-        <img src="images/grupperom_1.jpeg" alt="grupperom på p35 i PI238" loading="lazy" class="øvrebilde">
+        <img src="images/grupperom_1.jpeg" alt="grupperom på p35 i PI238" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI234-->
-        <img src="images/grupperom_2.jpeg" alt="grupperom på p35 PI234" loading="lazy" class="nedrebilde">
+        <img src="images/grupperom_2.jpeg" alt="grupperom på p35 PI234" class="nedrebilde">
         <p >Grupperom</p>
     </div>
 </div>
