--- a/campus.html
+++ b/campus.html
@@ -90,6 +90,8 @@
             <li>Vestibulum morbi blandit cursus risus at etiam sagittis, mi elementum dapibus lobortis, 
                 metus dolor congue tellus, ac congue ante lectus id risus.
             </li>
+            <li>Et harum quidem rerum facilis est et expedita distinctio.
+            </li>
         </ul>
     </div>
     <!--En grid for å lage en bilde kolasj.-->
@@ -115,10 +117,10 @@
                 ullamcorper nunc, eu porta urna. </li>
             <li>Donec sed tempus dolor. Cras suscipit lacus non libero efficitur, nec commodo neque vestibulum.</li>
             <li>In et elit 
-                vitae nunc rhoncus convallis at at lectus. Sed pellentesque, dolor a feugiat consectetur, odio lectus finibus 
-                arcu, sit amet suscipit orci quam et orci.</li>
-            <li>Cras tellus ante, dignissim vel pellentesque eu, commodo a orci. Integer nisi dolor, semper sit amet ultricies 
-                sit amet, facilisis quis nisl.
+                vitae nunc rhoncus convallis at at lectus. Sed pellentesque, dolor a feugiat consectetur, odio lectus finibus.</li>
+            <li>Cras tellus ante, dignissim vel pellentesque eu, commodo a orci. Integer nisi dolor, semper sit amet.
+            </li>
+            <li>Vat vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.
             </li>
         </ul>   
     </div>
@@ -145,6 +147,8 @@
             </li>
             <li>Integer convallis nec orci eget cursus.</li>
             <li>Proin pharetra placerat nisl, in ultricies orci condimentum at.</li>
+            <li>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat 
+                facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. </li>
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
@@ -164,10 +168,12 @@
             <li>Aenean a consequat lacus. Vivamus sit amet efficitur diam, eget posuere turpis. 
                 Ut consectetur dui tortor, et gravida lorem feugiat at. Mauris vestibulum hendrerit auctor.</li>
             <li>Maecenas scelerisque vulputate neque, eget bibendum massa lacinia vel. Sed posuere pharetra condimentum.</li>
-            <li> Nulla eu nisi ut est facilisis luctus. Aenean tincidunt felis quis metus ultricies tincidunt. 
-                Quisque sit amet urna non sapien convallis suscipit vehicula sed nisi.</li>
-            <li>In laoreet mi in dui ornare, non dignissim dui convallis.</li>
+            <li> Nulla eu nisi ut est facilisis luctus. Aenean tincidunt felis quis metus ultricies tincidunt.</li>
+            <li>In laoreet mi in dui ornare, non dignissim dui convallis. Quisque sit amet urna non sapien convallis suscipit 
+                vehicula sed nisi.</li>
             <li>Etiam placerat arcu nec nisi pretium, nec sollicitudin ipsum consequat. Ut at semper ligula.</li>
+            <li>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates 
+                repudiandae sint et molestiae non recusandae.</li>
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
