--- a/campus.html
+++ b/campus.html
@@ -92,6 +92,8 @@
             </li>
             <li>Et harum quidem rerum facilis est et expedita distinctio.
             </li>
+            <li>Vivamus viverra ligula vel luctus interdum. Integer volutpat eros ut ante rutrum, vel congue nisl porttitor. 
+            </li>
         </ul>
     </div>
     <!--En grid for å lage en bilde kolasj.-->
@@ -122,6 +124,7 @@
             </li>
             <li>Vat vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.
             </li>
+            
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
@@ -165,15 +168,16 @@
     <div class>
         <h3 class="område-overskrift">Grupperom</h3>
         <ul class="campus-fasiliteter">
-            <li>Aenean a consequat lacus. Vivamus sit amet efficitur diam, eget posuere turpis. 
-                Ut consectetur dui tortor, et gravida lorem feugiat at. Mauris vestibulum hendrerit auctor.</li>
-            <li>Maecenas scelerisque vulputate neque, eget bibendum massa lacinia vel. Sed posuere pharetra condimentum.</li>
-            <li> Nulla eu nisi ut est facilisis luctus. Aenean tincidunt felis quis metus ultricies tincidunt.</li>
-            <li>In laoreet mi in dui ornare, non dignissim dui convallis. Quisque sit amet urna non sapien convallis suscipit 
-                vehicula sed nisi.</li>
-            <li>Etiam placerat arcu nec nisi pretium, nec sollicitudin ipsum consequat. Ut at semper ligula.</li>
-            <li>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates 
-                repudiandae sint et molestiae non recusandae.</li>
+            <li>Proin cursus nisl at augue pharetra, eu tempus nulla dapibus.</li>
+            <li>Suspendisse mollis in risus in mattis. Duis eu sem vel massa sollicitudin ultrices. 
+                Curabitur vitae sapien quam.</li>
+            <li> Nullam ligula est, laoreet quis porta et, sollicitudin et ipsum. Etiam accumsan dignissim rutrum. 
+                Maecenas ut nisi eu mauris rutrum porttitor vel sed lectus. Nullam vitae nunc lectus. 
+                Fusce est tellus, blandit et mattis ut, tristique vehicula sapien. </li>
+            <li>Integer convallis nec orci eget cursus.</li>
+            <li>Proin pharetra placerat nisl, in ultricies orci condimentum at.</li>
+            <li>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat 
+                facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. </li>
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
