--- a/campus.html
+++ b/campus.html
@@ -124,6 +124,8 @@
             </li>
             <li>Vat vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.
             </li>
+            <li>Sed pretium a risus eu tempus. Donec sollicitudin nunc ac cursus iaculis. Maecenas sed orci vestibulum, 
+                fermentum eros non, hendrerit sapien.</li>
             
         </ul>   
     </div>
@@ -152,6 +154,7 @@
             <li>Proin pharetra placerat nisl, in ultricies orci condimentum at.</li>
             <li>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat 
                 facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. </li>
+            <li>Phasellus non aliquet lectus. Proin eleifend mattis nisl, quis aliquam libero aliquet ac.</li>
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
@@ -162,7 +165,7 @@
         <img src="images/makerspace_2.jpeg" alt="bildet av lasercut på makerspace" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI155-->
         <img src="images/makerspace_3.jpeg" alt="bilde av et område på makerspace" class="nedrebilde">
-        <p>Makerspace</p>
+        <p class="bilde_tekst">Makerspace</p>
     </div>
     
     <div class>
@@ -178,6 +181,8 @@
             <li>Proin pharetra placerat nisl, in ultricies orci condimentum at.</li>
             <li>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat 
                 facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. </li>
+            <li> In eget dui fringilla, tincidunt eros sit amet, elementum neque. Vestibulum accumsan nulla tellus, id euismod 
+                orci egestas sed.</li>
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
@@ -188,7 +193,7 @@
         <img src="images/grupperom_1.jpeg" alt="grupperom på p35 i PI238" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI234-->
         <img src="images/grupperom_2.jpeg" alt="grupperom på p35 PI234" class="nedrebilde">
-        <p >Grupperom</p>
+        <p class="bilde_tekst">Grupperom</p>
     </div>
 </div>
 <p class="siste-avsnitt"> Vivamus pretium tortor at sapien sagittis feugiat. Duis sodales, felis ut molestie porttitor, 
