index campus tekst

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                 </div>
                 <div class="articles-content" >
                 <a href="./campus.html"><h3>Oslomet Campus</h3></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Bygget P35 befinner seg på Pilestredet 35, og er oppkalt etter Ellen Gleditsch, 
+                    som var en kjemiker og en kvinnesaksforkjemper. P35 er det største bygget på universitet.</p>
                 </div>
             </div>
             <div class="articles">
