--- a/topical.html
+++ b/topical.html
@@ -120,7 +120,35 @@
                         of the following topics:<br><br> a)  The smartphone is used to pay bills, or<br> b) Access personal files
                     , and <br> c) Some people even rely on it to do
                     their jobs. </p>
-               
+                    <p>
+                    Smartphones have many great built-in features that make it easier for people to use
+                    them such as screen readers, size adjustments and voice commands. This makes the
+                    technology more user friendly and more adaptable for everyone to use. 
+                    Another way smartphones comply with universal design is that they get more
+                    simplified for every model put on the market. 
+                    </p>
+                    <p>
+                    New and smarter functions 
+                    are added which makes the phone easier to use, such as voice and face 
+                    recognition, read back and many customization options. 
+                    Smartphones are also very accessible all over the world and come in a wide
+                    price range which makes it available for everyone no matter the income or 
+                    economical situation.
+                    </p>
+                    <p>
+                    First of all, more people will be able to use the products and they will be more 
+                    user-friendly. This will make digital products more accessible and included to 
+                    all people in society. If the product does not comply with the law, there will be 
+                    economic consequences through fines. This could hurt small businesses who cannot 
+                    afford to make a mistake in production and in the worst case could lead to bankruptcy. 
+                    </p>
+                    <p>
+                    Our assumption is that in the short-term digitalization will be slightly decreased since 
+                    companies have to adapt and change their products, but in the long term more people will 
+                    be able to use the products which will accelerate the technological digitalization. 
+                    Also, smaller businesses could find it harder to get products approved since they do 
+                    not have the money and competence to develop these types of products.
+                    </p>
                 </div>
     
                 <div class="phone-box">
@@ -128,9 +156,7 @@
                     <img class="box-phone" src="images/smartphone-735.svg" id="SvgImage" alt="Picture of a phone">            
                 </div>
             </section>
- 
       </div>
-   
 </main>
 
     <!--FOOTER-->
