--- a/topical.html
+++ b/topical.html
@@ -14,10 +14,11 @@
 <body class="topical-body">
      <!-- Header og navigasjonsbar start -->
      <div class="index-header topical-head">
-        <picture class="nav-logo">
-            <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
-            <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart">
-        </picture>
+        <div class="headingtopical">
+            <h1>
+                Universal Design
+            </h1>
+        </div>
         <nav>
             <ul class="navigations">                                  
                     <!-- Dropdown-meny start-->
