--- a/accessibility.html
+++ b/accessibility.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="nn">
 <head>
@@ -93,8 +94,15 @@
          Hvordan vi har testet koden (21.11.2023)
          </h2>
     <p class="campus-intro">
-        Vi fulgte en grundig validerings- og kodekontrollprosess for både HTML og CSS på nettsiden vår. For å sikre Tilgjengeligheten brukte vi <a href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>.
-        Dette verktøyet evaluerer om nettsiden vår er tilgjengelig for alle brukere.Under testingen ble det avdekket noen feil meldinger, dette kom av ikonene vi har på footeren.
+        Vi har brukt to verktøy for å teste koden vår, disse var <a href="https://validator.w3.org/">W3C validator</a> 
+        og <a href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>. 
+        Disse verktøy hjalp oss med å avdekket feil som vi ikke umiddelbart oppdaget. 
+        For å validere og kontrolle koden vår i HTML og CSS brutke vi <a href="https://validator.w3.org/">W3C validator</a>. 
+        Denne hjalp oss å finne feil i koden og ting som var undøvendig å ha med.  
+    </p>
+        <p class="campus-intro">
+            For å sikre tilgjengeligheten brukte vi <a href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>.
+          Dette verktøyet evaluerer om nettsiden vår er tilgjengelig for alle brukere.Under testingen ble det avdekket noen feil meldinger, dette kom av ikonene vi har på footeren.
          testen viste at "linken ikke hadde tekst". For å løse dette probleme ved ålegge til beskrivende tekst til lenkene som inneholdt ikonene i footeren. Dette bidrar ikke bare rette opp
          tilgjengelighetsfeilen, men det gir også bedre informasjon til brukere som bruker skjermlesere eller annet hjelpeteknologi.
     </p>
@@ -153,10 +161,10 @@
 
     </footer>
 
-
 </body>
 </html>
 
 
-
         
+
+
