--- a/campus.html
+++ b/campus.html
@@ -46,7 +46,7 @@
 <div class="campus-container">
     <div class="item">
         <h1 class="campus-overskrift">Campus</h1>
-        <p> Bygget P35 befinner seg på Pilestredet 35, og er oppkalt etter Ellen Gleditsch, 
+        <p class="campus-innledning"> Bygget P35 befinner seg på Pilestredet 35, og er oppkalt etter Ellen Gleditsch, 
             som var en kjemiker og en kvinnesaksforkjemper. P35 er det største bygget på universitet. 
             P35 har mange forskjellige studentfasiliteter som for eksempel; stillerom, studiesal og
             grupperom og kantine. Men det stopper ikke der, for Oslomet har mer enn det, som f.eks. et eget bønnerom for 
@@ -189,7 +189,7 @@
         <p class="bilde_tekst">Grupperom</p>
     </div>
 </div>
-<p class="siste-avsnitt"> Vivamus pretium tortor at sapien sagittis feugiat. Duis sodales, felis ut molestie porttitor, 
+<p class="første-avsnitt"> Vivamus pretium tortor at sapien sagittis feugiat. Duis sodales, felis ut molestie porttitor, 
     mauris tortor rutrum dui, consequat aliquet leo ante nec eros. Aliquam faucibus nisi quis massa varius lobortis. 
     Sed luctus nisi eu maximus commodo. Integer accumsan ac augue eu aliquam. Donec nibh massa, porta commodo feugiat at, 
     dapibus sit amet nibh. Nulla a rutrum elit. Quisque congue consequat mi, eu iaculis quam pellentesque at. 
