campus alt tekst

--- a/campus.html
+++ b/campus.html
@@ -102,7 +102,7 @@
             =vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCCju-buYIDFQAAAAAdAAAAABAE-->
         <img src="images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" class="øvrebilde">
         <!--https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI330-->
-        <img src="images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" class="nedrebilde">
+        <img src="images/stille_lesesal_2.jpeg" alt=" et annet bilde av stille leserom på p35 i PI339" class="nedrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI339-->
         <p class="bilde_tekst">Stillerom</p>
     </div>
