--- a/topical.html
+++ b/topical.html
@@ -16,7 +16,7 @@
      <div class="index-header topical-head" >
         <div class="headingtopical">
             <h1>
-                Universal Design
+             Universal Design
             </h1>
         </div>
         <nav>
@@ -71,6 +71,9 @@
                             into Norwegian law and is prepared to issue large fines for digital services,
                             or devices that do not comply and adapt to the
                             basic principles of universal design.
+                            <a href="https://ec.europa.eu/social/main.jsp?catId=1202#:~:text=The%20European%20accessibility%20act%20is,divergent%20rules%20in%20Member%20States."
+                    target="_blank">European Accessibility Act.
+                    </a>
                         </p>
                     </div>
                 </div>
@@ -87,7 +90,10 @@
                         </h2>
                         <p>Universal design is based on creating products that ensure
                             accessibility and usability for all people no matter their
-                            situation or state.</p>
+                            situation or state.
+                            <a href="https://universaldesign.ie/what-is-universal-design/"
+                    target="_blank">What is Universal Design</a>       
+                        </p>
                     </div>
                 </div>
     
@@ -149,6 +155,9 @@
                     be able to use the products which will accelerate the technological digitalization. 
                     Also, smaller businesses could find it harder to get products approved since they do 
                     not have the money and competence to develop these types of products.
+                    <a href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/"
+                    target="_blank">Smartphone.
+                    </a>
                     </p>
                 </div>
     
