--- a/campus.html
+++ b/campus.html
@@ -207,29 +207,29 @@
             </a>
             <ul class="sosiale-medier">
                 <li>
-                    <a class="sosiale-link" href="https://www.facebook.com/oslomet/">
+                    <a class="sosiale-link" href="https://www.facebook.com/oslomet/" aria-label="Ikon til facebook">
                         <i class="fab fa-facebook"></i> <!--Facebook-ikon -->
                     </a>
                 </li>
                 <li>
-                    <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb">
+                    <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb"  aria-label="Ikon til instagram">
                         <i class="fab fa-instagram"></i><!-- Instagram-ikon -->
                     </a>
                 </li>
                 <li>
-                    <a class="sosiale-link" href="https://twitter.com/oslomet">
-                        <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
+                    <a class="sosiale-link" href="https://twitter.com/oslomet"  aria-label="Ikon til twitter">
+                        <i class="fab fa-twitter"></i> <!-- Twitter-ikon -->
                     </a>
                 </li>
                 <li>
-                    <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/">
+                    <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/"  aria-label="Ikon til linkedin">
                         <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                     </a>
                 </li>
             </ul>
         </div>
         <div class="adresse-kolonne">
-            <p class="adresse-tittel">Kontakt oss</p>
+            <h3 class="adresse-tittel">Kontakt oss</h3>
             <address class="kontakt">
                 <p class="address">
                     Pilestredet 35. Studenttorget
